* GITHUB#14474: Minor refactor of ComponentTree (Ankit Jain)
* GITHUB#14459: Minor refactoring of DocValuesConsumer to allow subclasses to reuse some of its merge logic. (Martijn van Groningen)

======================= Lucene 10.2.1 =======================

Bug Fixes
---------------------

* GITHUB#14522: Fix DISIDocIdStream::count so that it does not try to count beyond max.
  (Chris Hegarty}

======================= Lucene 10.2.0 =======================

API Changes
---------------------
* GITHUB#14069: Added DocIdSetIterator#intoBitSet API to let implementations
  optimize loading doc IDs into a bit set. (Adrien Grand)

* GITHUB#14134: Added Bits#applyMask API to help apply live docs as a mask on a
  bit set of matches. (Adrien Grand)

* GITHUB#14209: Deprecate Operations.union(Automaton,Automaton) and
  concatenate(Automaton,Automaton) in favor of the methods taking List.  (Robert Muir)

* GITHUB#14236: CombinedFieldQuery moved from lucene-sandbox to lucene-core.
  (Adrien Grand)

* GITHUB#14282: Remove redundant field argument from the DocIdSetBuilder constructor that takes a
  PointValues instance. (Luca Cavanna)

* GITHUB#14289: The unused public static DocIdSet#all method has been deprecated.
  (Luca Cavanna)

* GITHUB#14292: The redundant DocIdSet#bits method has been deprecated. (Luca Cavanna)

* GITHUB#14237: Add utils for sandbox facets module for the most common tasks. (Egor Potemkin)

* GITHUB#14312: Added DocIdSetIterator#docIDRunEnd to let iterators tell when
  they have runs of matches. This is then leveraged by conjunctions to
  automatically ignore clauses that have long runs of matches over these runs,
  resulting in better efficiency. (Adrien Grand)

New Features
---------------------

* GITHUB#14084, GITHUB#13635, GITHUB#13634, GITHUB#14170: Adds new `SeededKnnVectorQuery` query.
  These queries allow for the vector search entry points to be initialized via a `seed` query. This follows